--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
         </article>
     </main>
     <footer>
-        <p>Site criado por <a href="https://gustavoguanabara.github.io/" target="_blank">Gustavo Guanabara</a> para o <a
+        <p>Site criado por <a href="https://github.com/vmedeir0s" target="_blank">Vinicius Medeiros</a> para o <a
                 href="https://www.youtube.com/channel/UCrWvhVmt0Qac3HgsjQK62FQ" target="_blank">CursoemVideo</a></p>
     </footer>
 </body>
